fixed an issue with word breaks in the tweet container

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -43,6 +43,7 @@ article.tweet .content {
   border-color: #464646;
   justify-content: flex-start;
   padding: 0.75em;
+  word-break: break-all;
 }
 
 article.tweet footer {
